BUGFIX Fixed loader_frame.html scrollbar madness. Removed hacked CSS and tidied up popup to work in IE6/7 and Firefox consistently
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/branches/2.3@70724 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ComplexTableField_popup.css
+++ b/css/ComplexTableField_popup.css
@@ -1,29 +1,17 @@
-/* The hackiest fix out there for double-scrollbar problems in IE 7 */
-
-*:first-child+html {
-	overflow: auto;
-	background: #fff !important; 
-}
-
-* html {
-	overflow: auto;
-	background: #fff !important; 	
-} 
-
-html>/**/body {
-	overflow:auto !important;
-	background: #fff; 
-}
-
-/* end of hackiness */
-
 .ComplexTableField_popup {
 	background: #fff;	
 }
 
+html {
+	overflow-y: auto !important;
+}
+body {
+	height: auto;
+}
+
 #ComplexTableField_Popup_DetailForm input.loading {
 	background: #fff url(../../cms/images/network-save.gif) left center no-repeat;
-	padding-left:16px;
+	padding-left: 16px;
 }
 
 .PageControls {
